<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_run">
    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="bottom"
        android:stretchColumns="*"
        >
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="300px"
            android:gravity="center_horizontal"
            android:layout_marginTop="20px">
            <!--  -->
            <ImageView
                android:layout_width="285px"
                android:layout_height="285px"
                android:src="@drawable/logoea"
                android:gravity="center_horizontal"
                android:layout_marginTop="20px"/>
        </TableRow>
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="300px"
            android:gravity="center_horizontal"
            android:id="@+id/tabla_txt1">
            <!--  -->
            <TextView
                android:id="@+id/welcome_principal"
                android:layout_width="500px"
                android:layout_height="wrap_content"
                android:text="@string/welcomePrincipal"
                android:gravity="center_horizontal"
                android:textColor="#fff"
                android:textSize="12dp"
                android:fontFamily="sans-serif-light"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="20px"/>
        </TableRow>
        <TableRow
            android:layout_height="fill_parent"
            android:layout_width="300px"
            android:gravity="center_horizontal"
            android:id="@+id/tabla_txt2">
            <TextView
                android:id="@+id/welcome_principal2"
                android:layout_width="500px"
                android:layout_height="wrap_content"
                android:text="@string/selecciona"
                android:gravity="center_horizontal"
                android:textColor="#fff"
                android:textSize="12dp"
                android:fontFamily="sans-serif-light"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginTop="5px"
                android:visibility="gone"/>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="300px"
                android:gravity="center_horizontal"
                android:layout_column="0"
                android:layout_marginTop="70px"
                android:id="@+id/row1">
                <!--  -->
                <ImageButton
                    android:background="@drawable/circular"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_marginTop="10px"
                    android:layout_marginRight="60px"
                    android:src="@drawable/plane"
                    android:id="@+id/btn1" />
                <ImageButton
                    android:background="@drawable/circular"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_marginTop="10px"
                    android:layout_marginLeft="60px"
                    android:src="@drawable/car"
                    android:id="@+id/btn2" />
            </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="300px"
                android:gravity="center_horizontal"
                android:layout_column="0">
                <!--  -->
                <TextView
                    android:id="@+id/AS1"
                    android:layout_width="210px"
                    android:layout_height="wrap_content"
                    android:text="@string/viajes"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="10dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="5px"/>
                <TextView
                    android:id="@+id/AS2"
                    android:layout_width="210px"
                    android:layout_height="wrap_content"
                    android:text="@string/vehicular"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="10dp"
                    android:layout_marginLeft="10px"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="5px"/>
            </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"></TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
            android:layout_height="fill_parent"
            android:layout_width="300px"
            android:gravity="center_horizontal"
                android:layout_column="0">
            <!--  -->
            <ImageButton
                android:background="@drawable/circular"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginTop="50px"
                android:layout_marginRight="60px"
                android:src="@drawable/house"
                android:id="@+id/btn3" />
            <ImageButton
                android:background="@drawable/circular"
                android:layout_width="100px"
                android:layout_height="100px"
                android:layout_marginTop="50px"
                android:layout_marginLeft="60px"
                android:src="@drawable/medical"
                android:id="@+id/btn4" />
        </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_height="fill_parent"
                android:layout_width="300px"
                android:gravity="center_horizontal"
                android:layout_column="0"
                android:layout_marginBottom="100px">
                <!--  -->
                <TextView
                    android:id="@+id/AS3"
                    android:layout_width="200px"
                    android:layout_height="wrap_content"
                    android:text="@string/hogar"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="10dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginTop="5px"/>
                <TextView
                    android:id="@+id/AS4"
                    android:layout_width="200px"
                    android:layout_height="wrap_content"
                    android:text="@string/salud"
                    android:gravity="center_horizontal"
                    android:textColor="#fff"
                    android:textSize="10dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_marginLeft="20px"
                    android:layout_marginTop="5px"/>
            </TableRow>
        </TableRow>
        <TableRow
            android:layout_width="200px"
            android:layout_height="20dp"
            android:gravity="bottom"
            android:id="@+id/tabla_EA_APP">
            <TextView
                android:id="@+id/EA_APP"
                android:layout_width="200px"
                android:layout_height="16dp"
                android:text="@string/footer"
                android:gravity="center_horizontal"
                android:textColor="#fff"
                android:textSize="12dp"
                android:fontFamily="sans-serif-light"
                android:layout_marginLeft="50px"
                android:layout_marginRight="50px"
                android:layout_marginBottom="10px"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>